@@ -30,7 +30,7 @@ If
 .I service
 doesn't start with a dot or slash and doesn't end with a slash, it is
 searched in the default services directory
-.IR /var/service/ ,
+.IR /service/ ,
 otherwise relative to the current directory.
 .P
 .I command
@@ -217,7 +217,7 @@ This option implies
 .TP
 .B SVDIR
 The environment variable $SVDIR overrides the default services directory
-.IR /var/service/ .
+.IR /service/ .
 .TP
 .B SVWAIT
 The environment variable $SVWAIT overrides the default 7 seconds to wait
